further matrix operator analysis

--- a/parameters_and_initial_solution_analysis.ipynb
+++ b/parameters_and_initial_solution_analysis.ipynb
@@ -312,7 +312,9 @@
    "cell_type": "markdown",
    "source": [
     "Hipoteza: rozkład resetów rozwiązania początkowego zbiega w nieskończoności(dla dużych liczb) do rozkładu Benforda. https://pl.wikipedia.org/wiki/Rozkład_Benforda\n",
-    "albo to https://en.wikipedia.org/wiki/Zipf%27s_law"
+    "albo to https://en.wikipedia.org/wiki/Zipf%27s_law\n",
+    "ewentualnie jeszcze ten:\n",
+    "https://en.wikipedia.org/wiki/Poisson_distribution"
    ],
    "metadata": {
     "collapsed": false,
